# dm_keith

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
assets/story/: campaign_intro.json
characters/: dungeon_ai.json
docs/: DB_SCHEMA.sql  PERSONA_DMK.md
prompts/system/: dmk_system.md
src/agents/: __init__.py  dmk_agent.py
src/bots/: telegram_bot.py
src/config/: __init__.py  toggles.py
src/engine/: character.py  modes.py
src/engine/achievements/: __init__.py  registry.json  runtime.py
src/engine/storage/: __init__.py  setup_db.py  sqlite.py
src/engine/story/: __init__.py  runtime.py
src/utils/: __init__.py  dice.py  formatting.py
tests/bots/: test_telegram_utils.py
tests/config/: test_toggles.py
tests/engine/: test_character.py  test_modes.py  test_story.py
tests/engine/achievements/: test_runtime.py
tests/prompts/: test_system_prompt.py
tests/utils/: test_dice.py  test_formatting.py
tools/: seed_achievements.py  validate_story.py
